	PR fortran/26224 	* parse.c (parse_omp_do, parse_omp_structured_block): Call 	gfc_commit_symbols and gfc_warning_check.

* gfortran.dg/gomp/pr26224.f: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111153 138bc75d-0d04-0410-961f-82ee72b054a4