gcc/testsuite/gfortran.dg/gomp/pr26224.f
@@ -1,0 +1,8 @@
+C PR fortran/26224
+C { dg-do compile }
+
+      PROGRAM PR26224
+      INTEGER FOO
+C$OMP SINGLE
+C$OMP END SINGLE COPYPRIVATE (FOO, BAR)
+      END
